--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jso-dev/kf_backend_test/issues"
   },
-  "homepage": "https://github.com/jso-dev/kf_backend_test#readme"
+  "homepage": "https://github.com/jso-dev/kf_backend_test#readme",
+  "devDependencies": {
+    "jest": "^28.1.2"
+  }
 }
